# recoder

./: .gitignore  PKGBUILD  Pipfile  README.md  dev-run.sh  index.html  net.jeena.Recoder.flatpakref  pyproject.toml  recoder.desktop  recoder.install  recoder.py  transcoder.py
docs/: HELP.md
flatpak-repo/: gpg.key  summary  summary.idx  summary.sig
flatpak-repo/refs/heads/app/net.jeena.Recoder/x86_64/: master  stable
packaging/: PKGBUILD
packaging/flatpak/: net.jeena.Recoder.yaml  release-flatpak.sh
resources/: recoder.desktop
src/: app.py  models.py  transcoder_worker.py  ui.py
src/recoder/: app.py  app_state.py  config.py  drop_handler.py  file_entry_row.py  models.py  preferences.py  recoder_window.py  transcoder.py  transcoder_worker.py  ui.py  utils.py  window.py
src/resources/: file_entry_row.ui  net.jeena.Recoder.desktop  net.jeena.Recoder.metainfo.xml  net.jeena.recoder.gschema.xml  preferences.ui  recoder.ui  recoder_window.ui  resources.xml  style.css  window.ui
