[project]
name = "recoder"
version = "1.0.0"
description = "A GTK4 video transcoding GUI application"
readme = "README.md"
authors = [{name = "Jeena", email = "hello@jeena.net"}]
license = {file = "LICENSE"}
dependencies = [
  "pygobject",
]

[project.scripts]
recoder = "recoder.app:main"  # This creates the /usr/bin/recoder entrypoint

[build-system]
requires = ["setuptools>61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]